updated env example

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,14 @@ DB_READ_TIMEOUT=5s
 DB_WRITE_TIMEOUT=5s
 DB_IDLE_TIMEOUT=60s
 DB_DIAL_TIMEOUT=10s
+
+# JWT
+JWT_SIGNING_KEY=jwt-secret-key
+JWT_ACCESS_TOKEN_TTL=15m
+JWT_REFRESH_TOKEN_TTL=720h
+JWT_REFRESH_TOKEN_COOKIE_DOMAIN=.site.com
+JWT_REFRESH_TOKEN_COOKIE_PATH=/
+
+# PasswordHashSettings
+PASSWORD_HASH_BCRYPT_COST=10
+PASSWORD_HASH_BCRYPT_SALT=salt
