--- a/config/.env.example
+++ b/config/.env.example
@@ -19,6 +19,14 @@ DB_WRITE_TIMEOUT=5s
 DB_IDLE_TIMEOUT=60s
 DB_DIAL_TIMEOUT=10s
 
+# JWT
+JWT_SIGNING_METHOD=RS256
+JWT_KEYS_PATH=../certs
+JWT_ACCESS_TOKEN_TTL=15m
+JWT_REFRESH_TOKEN_TTL=720h
+JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost:44044
+JWT_REFRESH_TOKEN_COOKIE_PATH=/
+
 # PasswordHashSettings
 PASSWORD_HASH_BCRYPT_COST=10
 PASSWORD_HASH_BCRYPT_SALT=salt
