added test for login

--- a/config/.env.example
+++ b/config/.env.example
@@ -20,6 +20,7 @@ DB_IDLE_TIMEOUT=60s
 DB_DIAL_TIMEOUT=10s
 
 # JWT
+JWT_ISSUER=
 JWT_SIGNING_METHOD=RS256
 JWT_KEYS_PATH=../certs
 JWT_ACCESS_TOKEN_TTL=15m
