--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -15,6 +15,8 @@ linters-settings:
     tab-width: 1
   nestif:
     min-complexity: 4
+  sloglint:
+    args-on-sep-lines: true
   testpackage:
     skip-regexp: "(whitebox)_test\\.go"
   wsl:
@@ -46,6 +48,7 @@ linters:
     - nestif
     - noctx
     - revive
+    - sloglint
     - staticcheck
     - testpackage
     - unconvert
