added TTL for JWKS

--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -22,6 +22,7 @@ DB_DIAL_TIMEOUT=10s
 JWT_ISSUER=sso.rshelekhov.com
 JWT_SIGNING_METHOD=RS256
 JWT_KEYS_PATH=./certs
+JWT_JWK_SET_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
 JWT_REFRESH_TOKEN_TTL=720h
 JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost:44044
