--- a/config/.env.example
+++ b/config/.env.example
@@ -20,9 +20,10 @@ DB_IDLE_TIMEOUT=60s
 DB_DIAL_TIMEOUT=10s
 
 # JWT
-JWT_ISSUER=
+JWT_ISSUER=sso
 JWT_SIGNING_METHOD=RS256
-JWT_KEYS_PATH=../certs
+JWT_KEYS_PATH=./certs
+JWT_JWK_SET_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
 JWT_REFRESH_TOKEN_TTL=720h
 JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost:44044
