renamed env variables

--- a/config/.env.example
+++ b/config/.env.example
@@ -29,6 +29,6 @@ JWT_REFRESH_TOKEN_TTL=720h
 JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost:44044
 JWT_REFRESH_TOKEN_COOKIE_PATH=/
 
-# PasswordHashSettings
-PASSWORD_HASH_BCRYPT_COST=10
-PASSWORD_HASH_BCRYPT_SALT=salt
+# Default hash settings
+DEFAULT_HASH_BCRYPT_COST=10
+DEFAULT_HASH_BCRYPT_SALT=salt
