added env variables for local and s3 storages

--- a/config/.env.example
+++ b/config/.env.example
@@ -22,7 +22,6 @@ DB_DIAL_TIMEOUT=10s
 # JWT
 JWT_ISSUER=sso
 JWT_SIGNING_METHOD=RS256
-JWT_KEYS_PATH=./certs
 JWT_JWK_SET_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
 JWT_REFRESH_TOKEN_TTL=720h
@@ -32,3 +31,11 @@ JWT_REFRESH_TOKEN_COOKIE_PATH=/
 # Default hash settings
 DEFAULT_HASH_BCRYPT_COST=10
 DEFAULT_HASH_BCRYPT_SALT=salt
+
+# Key storage
+KEY_STORAGE_TYPE=local
+KEY_STORAGE_LOCAL_PATH=./certs
+EY_STORAGE_S3_REGION=
+KEY_STORAGE_S3_BUCKET=
+KEY_STORAGE_S3_KEY=
+KEY_STORAGE_S3_ENDPOINT=
