--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -21,7 +21,6 @@ DB_DIAL_TIMEOUT=10s
 # JWT
 JWT_ISSUER=sso.rshelekhov.com
 JWT_SIGNING_METHOD=RS256
-JWT_KEYS_PATH=./certs
 JWT_JWK_SET_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
 JWT_REFRESH_TOKEN_TTL=720h
@@ -31,3 +30,11 @@ JWT_REFRESH_TOKEN_COOKIE_PATH=/
 # PasswordHashSettings
 PASSWORD_HASH_BCRYPT_COST=10
 PASSWORD_HASH_BCRYPT_SALT=secret
+
+# Key storage
+KEY_STORAGE_TYPE=local
+KEY_STORAGE_LOCAL_PATH=./certs
+EY_STORAGE_S3_REGION=
+KEY_STORAGE_S3_BUCKET=
+KEY_STORAGE_S3_KEY=
+KEY_STORAGE_S3_ENDPOINT=
