--- a/config/.env.example
+++ b/config/.env.example
@@ -32,10 +32,16 @@ JWT_REFRESH_TOKEN_COOKIE_PATH=/
 DEFAULT_HASH_BCRYPT_COST=10
 DEFAULT_HASH_BCRYPT_SALT=salt
 
-# Key storage
+# Key storage (s3 or local)
 KEY_STORAGE_TYPE=local
+
+# Local key storage settings
 KEY_STORAGE_LOCAL_PATH=./certs
-EY_STORAGE_S3_REGION=
+
+# S3 key storage settings
+KEY_STORAGE_S3_REGION=
 KEY_STORAGE_S3_BUCKET=
-KEY_STORAGE_S3_KEY=
+KEY_STORAGE_S3_ACCESS_KEY=
+KEY_STORAGE_S3_SECRET_KEY=
+KEY_STORAGE_S3_PRIVATE_KEY_PATH=
 KEY_STORAGE_S3_ENDPOINT=
