--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -19,7 +19,7 @@ DB_IDLE_TIMEOUT=60s
 DB_DIAL_TIMEOUT=10s
 
 # JWT
-JWT_ISSUER=sso.rshelekhov.com
+JWT_ISSUER=sso.reframedapp.com
 JWT_SIGNING_METHOD=RS256
 JWT_JWK_SET_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
@@ -27,14 +27,20 @@ JWT_REFRESH_TOKEN_TTL=720h
 JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost:44044
 JWT_REFRESH_TOKEN_COOKIE_PATH=/
 
-# PasswordHashSettings
-PASSWORD_HASH_BCRYPT_COST=10
-PASSWORD_HASH_BCRYPT_SALT=secret
+# Default hash settings
+DEFAULT_HASH_BCRYPT_COST=10
+DEFAULT_HASH_BCRYPT_SALT=secret
 
-# Key storage
+# Key storage (s3 or local)
 KEY_STORAGE_TYPE=local
+
+# Local key storage settings
 KEY_STORAGE_LOCAL_PATH=./certs
-EY_STORAGE_S3_REGION=
+
+# S3 key storage settings
+KEY_STORAGE_S3_REGION=
 KEY_STORAGE_S3_BUCKET=
-KEY_STORAGE_S3_KEY=
+KEY_STORAGE_S3_ACCESS_KEY=
+KEY_STORAGE_S3_SECRET_KEY=
+KEY_STORAGE_S3_PRIVATE_KEY_PATH=
 KEY_STORAGE_S3_ENDPOINT=
