added email service

--- a/config/.env.example
+++ b/config/.env.example
@@ -45,3 +45,8 @@ KEY_STORAGE_S3_ACCESS_KEY=
 KEY_STORAGE_S3_SECRET_KEY=
 KEY_STORAGE_S3_PRIVATE_KEY_PATH=
 KEY_STORAGE_S3_ENDPOINT=
+
+# Email Mailgun service
+EMAIL_MAILGUN_DOMAIN=your-mailgun-domain
+EMAIL_MAILGUN_PRIVATE_API_KEY=your-mailgun-private-api-key
+EMAIL_SENDER=sso.reframedapp.com
