--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -44,3 +44,8 @@ KEY_STORAGE_S3_ACCESS_KEY=
 KEY_STORAGE_S3_SECRET_KEY=
 KEY_STORAGE_S3_PRIVATE_KEY_PATH=
 KEY_STORAGE_S3_ENDPOINT=
+
+# Email Mailgun service
+EMAIL_MAILGUN_DOMAIN=
+EMAIL_MAILGUN_PRIVATE_API_KEY=
+EMAIL_SENDER=
