updated email sender

--- a/config/.env.example
+++ b/config/.env.example
@@ -49,4 +49,5 @@ KEY_STORAGE_S3_ENDPOINT=
 # Email Mailgun service
 EMAIL_MAILGUN_DOMAIN=your-mailgun-domain
 EMAIL_MAILGUN_PRIVATE_API_KEY=your-mailgun-private-api-key
-EMAIL_SENDER=sso.reframedapp.com
+EMAIL_SENDER=noreply@sso.reframedapp.com
+EMAIL_TEMPLATES_PATH=./static/email_templates
