--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -49,3 +49,4 @@ KEY_STORAGE_S3_ENDPOINT=
 EMAIL_MAILGUN_DOMAIN=
 EMAIL_MAILGUN_PRIVATE_API_KEY=
 EMAIL_SENDER=
+EMAIL_TEMPLATES_PATH=./static/email_templates
