--- a/config/.env.example
+++ b/config/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 
 # GRPC Server
 GRPC_SERVER_PORT=44044
-GRPC_SERVER_TIMEOUT=5s
+GRPC_SERVER_TIMEOUT=10s
 
 # PostgresQL
 DB_HOST=localhost
@@ -46,8 +46,10 @@ KEY_STORAGE_S3_SECRET_KEY=
 KEY_STORAGE_S3_PRIVATE_KEY_PATH=
 KEY_STORAGE_S3_ENDPOINT=
 
+# Email service type (mock or mailgun)
+EMAIL_SERVICE_TYPE=mock
+
 # Email Mailgun service
 EMAIL_MAILGUN_DOMAIN=your-mailgun-domain
 EMAIL_MAILGUN_PRIVATE_API_KEY=your-mailgun-private-api-key
 EMAIL_SENDER=noreply@sso.reframedapp.com
-EMAIL_TEMPLATES_PATH=./static/email_templates
