--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -1,7 +1,7 @@
 # General test data
 TEST_ISSUER=sso.reframedapp.com
 TEST_APP_ID=test-app-id
-TEST_VERIFICATION_URL=reframedapp.com/confirm?token=
+TEST_VERIFICATION_URL=reframedapp.com/verify-email/token=
 
 # Test data for the 1st user
 TEST_USER_1_EMAIL=test-user-1@reframedapp.com
