added tests for reset password flow

--- a/config/local_tests.env
+++ b/config/local_tests.env
@@ -2,6 +2,7 @@
 TEST_ISSUER=sso.reframedapp.com
 TEST_APP_ID=test-app-id
 TEST_VERIFICATION_URL=reframedapp.com/verify-email/token=
+TEST_CONFIRM_CHANGE_PASSWORD_URL=reframedapp.com/password/change?token=
 
 # Test data for the 1st user
 TEST_USER_1_EMAIL=test-user-1@reframedapp.com
