--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,10 +31,16 @@ jobs:
         with:
           go-version: '1.21'
 
-      - name: Set up PostgreSQL and run migrations
-        run: migrate -database ${{ env.DATABASE_URL }} -path migrations up
+      - name: Install golang-migrate
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.12.2/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          which migrate
+
+      - name: Run migrations
+        run: make migrate
         env:
-          DATABASE_URL: postgres://postgres:password@localhost:5432/testdb
+          POSTGRESQL_URL: postgres://postgres:password@localhost:5432/testdb
 
       - name: Install dependencies
         run: go mod download
