--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Run migrations
         run: make migrate
         env:
-          POSTGRESQL_URL: postgres://postgres:password@localhost:5432/testdb
+          POSTGRESQL_URL: postgres://app:p@ssw0rd@localhost:5432/sso_dev
 
       - name: Install dependencies
         run: go mod download
