--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,9 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Create /config directory
+        run: mkdir -p ./config
+
       - name: Create .env file
         run: echo "${{ secrets.ENV_CONFIG }}" > /config/.env
 
