--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,10 @@ jobs:
             sleep 5
           done
 
+      - name: Test Database Connection
+        run: |
+          psql -h localhost -p 5432 -U app -d sso_dev -c '\l'
+
       - name: Install dependencies
         run: go mod download
 
