--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_USER: app
+          POSTGRES_USER: root
           POSTGRES_PASSWORD: password
           POSTGRES_DB: sso_dev
         ports:
