updated example config

--- a/config/.env.example
+++ b/config/.env.example
@@ -9,8 +9,8 @@ GRPC_SERVER_TIMEOUT=15s
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=sso_dev
-DB_USER=app
-DB_PASSWORD=1234
+DB_USER=root
+DB_PASSWORD=password
 DB_SSL_MODE=disable
 DB_CONN_URL="postgres://$DB_USER:$DB_PASSWORD@$DB_HOST:$DB_PORT/$DB_NAME?sslmode=$DB_SSL_MODE"
 DB_CONN_POOL_SIZE=10
