--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,8 +47,17 @@ jobs:
       - name: Create /config directory
         run: mkdir -p ./config
 
+      - name: Display individual secrets
+        run: |
+          echo "DB_CONN_URL=${{ secrets.DB_CONN_URL }}"
+          echo "APP_ENV=${{ secrets.APP_ENV }}"
+          echo "GRPC_SERVER_PORT=${{ secrets.GRPC_SERVER_PORT }}"
+
       - name: Create .env file
-        run: echo "${{ secrets.ENV_CONFIG }}" > ./config/.env
+        run: |
+          set -x
+          echo "${{ secrets.ENV_CONFIG }}" > ./config/.env
+          cat ./config/.env
 
       - name: Display .env file
         run: cat ./config/.env
