--- a/config/.env.example
+++ b/config/.env.example
@@ -3,16 +3,10 @@ APP_ENV=local
 
 # GRPC Server
 GRPC_SERVER_PORT=44044
-GRPC_SERVER_TIMEOUT=15s
+GRPC_SERVER_TIMEOUT=30s
 
 # PostgresQL
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=sso_dev
-DB_USER=root
-DB_PASSWORD=password
-DB_SSL_MODE=disable
-DB_CONN_URL="postgres://$DB_USER:$DB_PASSWORD@$DB_HOST:$DB_PORT/$DB_NAME?sslmode=$DB_SSL_MODE"
+DB_CONN_URL=postgres://root:password@localhost:5432/sso_dev?sslmode=disable
 DB_CONN_POOL_SIZE=10
 DB_READ_TIMEOUT=5s
 DB_WRITE_TIMEOUT=5s
@@ -25,7 +19,7 @@ JWT_SIGNING_METHOD=RS256
 JWT_JWK_SET_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
 JWT_REFRESH_TOKEN_TTL=720h
-JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost:44044
+JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost
 JWT_REFRESH_TOKEN_COOKIE_PATH=/
 
 # Default hash settings
