--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -69,6 +69,9 @@ jobs:
               -p 44044:44044 \
               --name app \
               grpc-sso:latest
+          
+            # Run setup-dev to set up the database and insert test data
+            docker exec app make setup-dev
           EOF
 
       - name: Clean up
