--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -76,9 +76,11 @@ jobs:
             # Check if the container is running
             if [ "$(docker ps -q -f name=app)" ]; then
               echo "Container is running. Executing setup-dev."
-              docker exec app make setup-dev
+              docker exec app make setup-dev || { echo "Failed to execute setup-dev"; exit 1; }
             else
-              echo "Container is not running. Exiting."
+              echo "Container is not running. Checking logs..."
+              docker logs app
+              echo "Exiting."
               exit 1
             fi
           EOF
