--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -67,7 +67,7 @@ jobs:
           
             # Run the new container
             docker run -d \
-              -v ./config/grpc-sso:/src/config \
+              -v ${PWD}/config/grpc-sso:/src/config \
               -p 44044:44044 \
               --name app \
               grpc-sso:latest
