--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -65,9 +65,10 @@ jobs:
             # Load the Docker image
             docker load -i /tmp/grpc-sso.tar
           
-            # Run the new container
+            # Run the new container with the CONFIG_PATH environment variable set
             docker run -d \
               -v ${PWD}/config/grpc-sso:/src/config \
+              -e CONFIG_PATH=/src/config/.env \
               -p 44044:44044 \
               --name app \
               grpc-sso:latest
