added POSTGRESQL_URL env var

--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -65,10 +65,12 @@ jobs:
             # Load the Docker image
             docker load -i /tmp/grpc-sso.tar
           
-            # Run the new container with the CONFIG_PATH environment variable set
+            # Run the new container with the CONFIG_PATH environment variable set for loading config
+            # and POSTGRESQL_URL environment variable set for running database migrations
             docker run -d \
               -v ${PWD}/config/grpc-sso:/src/config \
               -e CONFIG_PATH=/src/config/.env \
+              -e POSTGRESQL_URL=${{ secrets.POSTGRESQL_URL }} \
               -p 44044:44044 \
               --name app \
               grpc-sso:latest
