--- a/.github/workflows/deploy-on-prod.yaml
+++ b/.github/workflows/deploy-on-prod.yaml
@@ -1,8 +1,13 @@
 name: Deploy on PROD from Docker Hub
 
 on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to deploy'
+        required: true
   workflow_run:
-    workflows: ["Publish to Docker Hub"]
+    workflows: [ "Publish to Docker Hub" ]
     types:
       - completed
 
