--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -1,9 +1,11 @@
 name: Deploy on DEV
 
 on:
-  push:
-    tags:
-      - 'dev-v.'
+  pull_request:
+    types:
+      - closed
+    branches:
+      - dev
 
 env:
   DEV_SERVER_USER: ${{ secrets.DEV_SERVER_USER }}
@@ -12,6 +14,7 @@ env:
 
 jobs:
   deploy:
+    if: github.event.pull_request.merged == true
     name: Deploy on DEV server
     runs-on: ubuntu-latest
 
