--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -11,7 +11,6 @@ env:
   DEV_SERVER_USER: ${{ secrets.DEV_SERVER_USER }}
   DEV_SERVER_HOST: ${{ secrets.DEV_SERVER_HOST }}
   DEV_SERVER_SSH_KEY: ${{ secrets.DEV_SERVER_SSH_KEY }}
-  CONTAINER_NAME: grpc-sso
 
 jobs:
   deploy:
@@ -27,7 +26,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t $CONTAINER_NAME:latest .
+          docker build -t grpc-sso:latest .
 
       - name: Create a temporary SSH key file
         run: |
@@ -42,44 +41,44 @@ jobs:
       - name: Upload Docker image to DEV server
         run: |
           # Save Docker image to a tar file 
-          docker save $CONTAINER_NAME:latest -o $CONTAINER_NAME.tar
+          docker save grpc-sso:latest -o grpc-sso.tar
           
           # Transfer Docker image tar file to DEV server
-          scp -i /tmp/ssh_key $CONTAINER_NAME.tar $DEV_SERVER_USER@$DEV_SERVER_HOST:/tmp/
+          scp -i /tmp/ssh_key grpc-sso.tar $DEV_SERVER_USER@$DEV_SERVER_HOST:/tmp/
 
       - name: Deploy Docker image to DEV server
         run: |
           ssh -i /tmp/ssh_key $DEV_SERVER_USER@$DEV_SERVER_HOST << 'EOF'
             # Create config file on the server
-            echo "${{ secrets.ENV_CONFIG_DEV }}" > ./config/$CONTAINER_NAME/.env
+            echo "${{ secrets.ENV_CONFIG_DEV }}" > ./config/grpc-sso/.env
           
             # Stop and remove the existing container (if any)
-            docker stop $CONTAINER_NAME || true
-            docker rm $CONTAINER_NAME || true
+            docker stop sso-app || true
+            docker rm sso-app || true
           
             # Load the Docker image
-            docker load -i /tmp/$CONTAINER_NAME.tar
+            docker load -i /tmp/grpc-sso.tar
           
             # Run the new container with the CONFIG_PATH environment variable for running the app
             # and POSTGRESQL_URL environment variable set for running migrations
             docker run -d \
-              -v ${PWD}/config/$CONTAINER_NAME:/src/config \
+              -v ${PWD}/config/grpc-sso:/src/config \
               -e CONFIG_PATH=/src/config/.env \
               -e POSTGRESQL_URL=${{ secrets.POSTGRESQL_URL }} \
               -p 44044:44044 \
-              --name $CONTAINER_NAME \
-              $CONTAINER_NAME:latest
+              --name sso-app \
+              grpc-sso:latest
           
             # Wait for a few seconds to ensure the container is running
             sleep 10
 
             # Check if the container is running
-            if [ "$(docker ps -q -f name=$CONTAINER_NAME)" ]; then
+            if [ "$(docker ps -q -f name=sso-app)" ]; then
               echo "Container is running. Executing setup-dev command."
-              docker exec $CONTAINER_NAME sh -c "make setup-dev" || { echo "Failed to execute setup-dev command"; exit 1; }
+              docker exec sso-app sh -c "make setup-dev" || { echo "Failed to execute setup-dev command"; exit 1; }
             else
               echo "Container is not running. Checking logs..."
-              docker logs $CONTAINER_NAME
+              docker logs sso-app
               echo "Exiting."
               exit 1
             fi
@@ -89,4 +88,4 @@ jobs:
         run: |
           # Remove temporary files
           rm /tmp/ssh_key
-          rm $CONTAINER_NAME.tar
+          rm grpc-sso.tar
