--- a/.github/workflows/deploy-on-prod.yaml
+++ b/.github/workflows/deploy-on-prod.yaml
@@ -15,7 +15,6 @@ env:
   DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_RS_PASSWORD }}
   ENV_CONFIG_PROD: ${{ secrets.ENV_CONFIG_PROD }}
   REGISTRY_IMAGE: rshelekhov/grpc-sso
-  CONTAINER_NAME: grpc-sso
 
 jobs:
   deploy:
@@ -34,7 +33,7 @@ jobs:
           
           ssh -i /tmp/ssh_key $PROD_SERVER_USER@PROD_SERVER_HOST << 'EOF'
             # Create config file on the server
-            echo "$ENV_CONFIG_PROD" > ./config/$CONTAINER_NAME/.env
+            echo "$ENV_CONFIG_PROD" > ./config/grpc-sso/.env
           
              # Login to Docker Hub
             echo $DOCKER_HUB_PASSWORD | docker login -u $DOCKER_HUB_USERNAME --password-stdin
@@ -43,26 +42,26 @@ jobs:
             docker pull $REGISTRY_IMAGE:latest
           
             # Stop and remove the existing container (if any)
-            docker stop $CONTAINER_NAME || true
-            docker rm $CONTAINER_NAME || true
+            docker stop sso-app || true
+            docker rm sso-app || true
           
             # Run the new container with the CONFIG_PATH environment variable for running the app
             # and POSTGRESQL_URL environment variable set for running migrations
             docker run -d \
-              -v ${PWD}/config/$CONTAINER_NAME:/src/config \
+              -v ${PWD}/config/grpc-sso:/src/config \
               -e CONFIG_PATH=/src/config/.env \
               -e POSTGRESQL_URL=${{ secrets.POSTGRESQL_URL }} \
               -p 44044:44044 \
-              --name $CONTAINER_NAME \
-              $CONTAINER_NAME:latest
+              --name sso-app \
+              grpc-sso:latest
           
             # Check if the container is running
-            if [ "$(docker ps -q -f name=$CONTAINER_NAME)" ]; then
+            if [ "$(docker ps -q -f name=sso-app)" ]; then
               echo "Container is running. Executing setup command."
-              docker exec $CONTAINER_NAME sh -c "make setup" || { echo "Failed to execute setup command"; exit 1; }
+              docker exec sso-app sh -c "make setup" || { echo "Failed to execute setup command"; exit 1; }
             else
               echo "Container is not running. Checking logs..."
-              docker logs $CONTAINER_NAME
+              docker logs sso-app
               echo "Exiting."
               exit 1
             fi
