added config example for password hash algorithms

--- a/config/.env.example
+++ b/config/.env.example
@@ -22,9 +22,19 @@ JWT_REFRESH_TOKEN_TTL=720h
 JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost
 JWT_REFRESH_TOKEN_COOKIE_PATH=/
 
-# Default hash settings
-DEFAULT_HASH_BCRYPT_COST=10
-DEFAULT_HASH_BCRYPT_SALT=salt
+# Password hash settings (types: default (argon2), argon2, bcrypt)
+PASSWORD_HASH_TYPE=argon2
+PASSWORD_HASH_SALT_LENGTH=24
+PASSWORD_HASH_PEPPER=red-hot-chili-peppers
+
+# Password hash Argon2 params
+PASSWORD_HASH_ARGON2_TIME=2
+PASSWORD_HASH_ARGON2_MEMORY=24576
+PASSWORD_HASH_ARGON2_PARALLELISM=2
+PASSWORD_HASH_ARGON2_KEY_LENGTH=24
+
+# Password hash Bcrypt params
+PASSWORD_HASH_BCRYPT_COST=10
 
 # Key storage (s3 or local)
 KEY_STORAGE_TYPE=local
