--- a/config/.env.example
+++ b/config/.env.example
@@ -1,4 +1,4 @@
-# App environment — local, dev, prod
+# App environment (types: local, dev, prod)
 APP_ENV=local
 
 # GRPC Server
@@ -6,19 +6,34 @@ GRPC_SERVER_HOST=localhost
 GRPC_SERVER_PORT=44044
 GRPC_SERVER_TIMEOUT=30s
 GRPC_SERVER_RETRIES_COUNT=3
+GRPC_METHODS_CONFIG_PATH=config/grpc_methods.yaml
+
+# HTTP Server
+HTTP_SERVER_ADDRESS=localhost:8081
+HTTP_SERVER_TIMEOUT=10s
+HTTP_SERVER_IDLE_TIMEOUT=60s
+HTTP_SERVER_REQUEST_LIMIT_BY_IP=200
+
+# Storage type (types: mongo or postgres)
+DB_TYPE=postgres
+
+# MongoDB
+DB_MONGO_URI=mongodb://localhost:27017
+DB_MONGO_NAME=mongodbname
 
 # PostgresQL
-DB_CONN_URL=postgres://root:password@localhost:5432/sso_dev?sslmode=disable
-DB_CONN_POOL_SIZE=10
-DB_READ_TIMEOUT=5s
-DB_WRITE_TIMEOUT=5s
-DB_IDLE_TIMEOUT=60s
-DB_DIAL_TIMEOUT=10s
+DB_POSTGRES_CONN_URL=postgres://root:password@localhost:5432/sso_dev?sslmode=disable
+DB_POSTGRES_CONN_POOL_SIZE=10
+DB_POSTGRES_READ_TIMEOUT=5s
+DB_POSTGRES_WRITE_TIMEOUT=5s
+DB_POSTGRES_IDLE_TIMEOUT=60s
+DB_POSTGRES_DIAL_TIMEOUT=10s
 
 # JWT
 JWT_ISSUER=sso
 JWT_SIGNING_METHOD=RS256
-JWT_JWK_SET_TTL=24h
+JWT_JWKS_URL=http://localhost:44044/jwks
+JWT_JWKS_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
 JWT_REFRESH_TOKEN_TTL=720h
 JWT_REFRESH_TOKEN_COOKIE_DOMAIN=localhost
@@ -38,7 +53,7 @@ PASSWORD_HASH_ARGON2_KEY_LENGTH=24
 # Password hash Bcrypt params
 PASSWORD_HASH_BCRYPT_COST=10
 
-# Key storage (s3 or local)
+# Key storage (types: s3 or local)
 KEY_STORAGE_TYPE=local
 
 # Local key storage settings
@@ -52,10 +67,15 @@ KEY_STORAGE_S3_SECRET_KEY=
 KEY_STORAGE_S3_PRIVATE_KEY_PATH=
 KEY_STORAGE_S3_ENDPOINT=
 
-# Email service type (mock or mailgun)
+# Email service (types: mock or mailgun)
 EMAIL_SERVICE_TYPE=mock
+EMAIL_TEMPLATES_PATH=./static/email_templates
 
 # Email Mailgun service
 EMAIL_MAILGUN_DOMAIN=your-mailgun-domain
 EMAIL_MAILGUN_PRIVATE_API_KEY=your-mailgun-private-api-key
 EMAIL_SENDER=noreply@sso.reframedapp.com
+
+# Verification service
+# Use to verify tokens generated for verification email and reset password requests
+VERIFICATION_TOKEN_EXPIRY_TIME=24h
