--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,12 +1,77 @@
 version: "2"
 sql:
-  - schema: "migrations"
-    queries: "internal/storage/postgres/query"
+  - name: app
+    schema: "migrations"
+    queries: "internal/infrastructure/storage/app/postgres/query"
     engine: "postgresql"
     gen:
       go:
         package: "sqlc"
-        out: "internal/storage/postgres/sqlc"
+        out: "internal/infrastructure/storage/app/postgres/sqlc"
+        sql_package: "pgx/v5"
+        emit_db_tags: true
+        emit_interface: true
+        emit_empty_slices: true
+        overrides:
+          - db_type: "pg_catalog.timestamptz"
+            go_type: "time.Time"
+
+  - name: auth
+    schema: "migrations"
+    queries: "internal/infrastructure/storage/auth/postgres/query"
+    engine: "postgresql"
+    gen:
+      go:
+        package: "sqlc"
+        out: "internal/infrastructure/storage/auth/postgres/sqlc"
+        sql_package: "pgx/v5"
+        emit_db_tags: true
+        emit_interface: true
+        emit_empty_slices: true
+        overrides:
+          - db_type: "pg_catalog.timestamptz"
+            go_type: "time.Time"
+
+  - name: session
+    schema: "migrations"
+    queries: "internal/infrastructure/storage/session/postgres/query"
+    engine: "postgresql"
+    gen:
+      go:
+        package: "sqlc"
+        out: "internal/infrastructure/storage/session/postgres/sqlc"
+        sql_package: "pgx/v5"
+        emit_db_tags: true
+        emit_interface: true
+        emit_empty_slices: true
+        overrides:
+          - db_type: "pg_catalog.timestamptz"
+            go_type: "time.Time"
+
+  - name: user
+    schema: "migrations"
+    queries: "internal/infrastructure/storage/user/postgres/query"
+    engine: "postgresql"
+    gen:
+      go:
+        package: "sqlc"
+        out: "internal/infrastructure/storage/user/postgres/sqlc"
+        sql_package: "pgx/v5"
+        emit_db_tags: true
+        emit_interface: true
+        emit_empty_slices: true
+        overrides:
+          - db_type: "pg_catalog.timestamptz"
+            go_type: "time.Time"
+
+  - name: verification
+    schema: "migrations"
+    queries: "internal/infrastructure/storage/verification/postgres/query"
+    engine: "postgresql"
+    gen:
+      go:
+        package: "sqlc"
+        out: "internal/infrastructure/storage/verification/postgres/sqlc"
         sql_package: "pgx/v5"
         emit_db_tags: true
         emit_interface: true
