--- a/config/.env.example
+++ b/config/.env.example
@@ -6,7 +6,7 @@ GRPC_SERVER_HOST=localhost
 GRPC_SERVER_PORT=44044
 GRPC_SERVER_TIMEOUT=30s
 GRPC_SERVER_RETRIES_COUNT=3
-GRPC_METHODS_CONFIG_PATH=config/grpc_methods.yaml
+GRPC_METHODS_CONFIG_PATH=./config/grpc_methods.yaml
 
 # HTTP Server
 HTTP_SERVER_ADDRESS=localhost:8081
@@ -32,7 +32,7 @@ DB_POSTGRES_DIAL_TIMEOUT=10s
 # JWT
 JWT_ISSUER=sso
 JWT_SIGNING_METHOD=RS256
-JWT_JWKS_URL=http://localhost:44044/jwks
+JWT_JWKS_URL=http://localhost:8081/.well-known/jwks.json
 JWT_JWKS_TTL=24h
 JWT_ACCESS_TOKEN_TTL=15m
 JWT_REFRESH_TOKEN_TTL=720h
