--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -47,9 +47,11 @@ jobs:
 
       - name: Deploy Docker image to DEV server
         run: |
+          # Transfer config file with grpc methods
+          scp -i /tmp/ssh_key config/grpc_methods.yaml $DEV_SERVER_USER@$DEV_SERVER_HOST:./config/sso/
+          
           ssh -i /tmp/ssh_key $DEV_SERVER_USER@$DEV_SERVER_HOST << 'EOF'
             # Create config file on the server
-            mkdir -p ./config/sso
             echo "${{ secrets.ENV_CONFIG_DEV }}" > ./config/sso/.env
           
             # Stop and remove the existing container (if any)
