--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -48,11 +48,10 @@ jobs:
       - name: Deploy Docker image to DEV server
         run: |
           
-          ssh -i /tmp/ssh_key $DEV_SERVER_USER@$DEV_SERVER_HOST << EOF
-            mkdir -p ${PWD}/config/sso
+          ssh -i /tmp/ssh_key $DEV_SERVER_USER@$DEV_SERVER_HOST << 'EOF'
             # Create config file on the server
-            echo '${{ secrets.ENV_CONFIG_DEV }}' > ${PWD}/config/sso/.env
-            echo '${{ secrets.GRPC_METHODS_YAML }}' > ${PWD}/config/sso/grpc_methods.yaml
+            echo "${{ secrets.ENV_CONFIG_DEV }}" > ./config/sso/.env
+            echo "${{ secrets.GRPC_METHODS_YAML }}" > ./config/sso/grpc_methods.yaml
           
             # Stop and remove the existing container (if any)
             docker stop sso-app || true
