--- a/.github/workflows/deploy-on-dev.yaml
+++ b/.github/workflows/deploy-on-dev.yaml
@@ -47,11 +47,12 @@ jobs:
 
       - name: Deploy Docker image to DEV server
         run: |
+          mkdir -p ./config/sso
+          scp -i /tmp/ssh_key config/grpc_methods.yaml $DEV_SERVER_USER@$DEV_SERVER_HOST:/config/sso/
           
           ssh -i /tmp/ssh_key $DEV_SERVER_USER@$DEV_SERVER_HOST << 'EOF'
             # Create config file on the server
             echo "${{ secrets.ENV_CONFIG_DEV }}" > ./config/sso/.env
-            echo "${{ secrets.GRPC_METHODS_YAML }}" > ./config/sso/grpc_methods.yaml
           
             # Stop and remove the existing container (if any)
             docker stop sso-app || true
@@ -59,15 +60,6 @@ jobs:
           
             # Load the Docker image
             docker load -i /tmp/sso.tar
-          
-            # Check the content of the grpc_methods.yaml
-            echo "Content of ./config/sso/grpc_methods.yaml:"
-            ls -l ./config/sso/grpc_methods.yaml
-            cat ./config/sso/grpc_methods.yaml
-          
-            # Check the GRPC_METHODS_YAML variable
-            echo "GRPC_METHODS_YAML variable:"
-            echo "${{ secrets.GRPC_METHODS_YAML }}"
           
             # Run the new container with the CONFIG_PATH environment variable for running the app
             # and POSTGRESQL_URL environment variable set for running migrations
