--- a/config/.env.example
+++ b/config/.env.example
@@ -10,7 +10,7 @@ GRPC_METHODS_CONFIG_PATH=./config/grpc_methods.yaml
 
 # HTTP Server
 HTTP_SERVER_ADDRESS=localhost:8081
-HTTP_SERVER_TIMEOUT=10s
+HTTP_SERVER_TIMEOUT=30s
 HTTP_SERVER_IDLE_TIMEOUT=60s
 HTTP_SERVER_REQUEST_LIMIT_BY_IP=200
 
@@ -18,8 +18,9 @@ HTTP_SERVER_REQUEST_LIMIT_BY_IP=200
 DB_TYPE=postgres
 
 # MongoDB
-DB_MONGO_URI=mongodb://localhost:27017
+DB_MONGO_URI=mongodb+srv://root:password@cluster0.ocbs7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_MONGO_NAME=mongodbname
+DB_MONGO_TIMEOUT=30s
 
 # PostgresQL
 DB_POSTGRES_CONN_URL=postgres://root:password@localhost:5432/sso_dev?sslmode=disable
