--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -23,3 +23,5 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60
+          args: --config=.golangci.yaml
+          
