add redis connection

--- a/config/.env.example
+++ b/config/.env.example
@@ -30,6 +30,16 @@ DB_POSTGRES_WRITE_TIMEOUT=5s
 DB_POSTGRES_IDLE_TIMEOUT=60s
 DB_POSTGRES_DIAL_TIMEOUT=10s
 
+# Redis (for sessions and tokens)
+DB_REDIS_HOST=localhost
+DB_REDIS_PORT=6379
+DB_REDIS_PASSWORD=
+DB_REDIS_DB=0
+DB_REDIS_POOL_SIZE=10
+DB_REDIS_MIN_IDLE_CONNS=5
+DB_REDIS_SESSION_TTL=168h
+DB_REDIS_REVOKED_TOKEN_TTL=24h
+
 # JWT
 JWT_ISSUER=sso
 JWT_SIGNING_METHOD=RS256
